CreateAccount and Login working with validations

--- a/client/src/components/hero.scss
+++ b/client/src/components/hero.scss
@@ -1,4 +1,7 @@
 .hero{
-    height:25rem;
     width: 100%;
+    background-image: url('/assets/images/sib.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 70vw;
 }
